# atool

./: 00_📈_Report_Summary.py  00_📈_报告汇总.py  README.md  data.py  initialize.py  pyproject.toml  requirements.txt  utils.py
curd/: __init__.py  sample.py
examples/: behaviors.json  history-trend.json
pages/: 01_✍_Sample_Center.py  01_✍_模板中心.py  02_🏊‍_Account_Management.py  02_🤝_接口同步.py
public/: config.py  initialize.py
statics/: E2E测试用例模板.xlsx  case.tpl
