[tool.poetry]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = ["chaochao.wu <chaochao.wu@going-link.com>"]
readme = "README.md"
packages = [{include = "streamlit_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.20.0"
loguru = "^0.6.0"
openpyxl = "^3.1.2"
streamlit-on-hover-tabs = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
