[tool.poetry]
name = "atool"
version = "0.1.0"
description = ""
authors = ["chaochao.wu <chaochao.wu@going-link.com>"]
readme = "README.md"
packages = [{include = "atool"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.20.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
